# SlicerMHubRunner

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md
MHubRunner/: CMakeLists.txt  MHubRunner.py
MHubRunner/Resources/UI/: MHubRunner.ui  MHubRunnerSettings.ui
